apps/base/librenms/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: librenms-db
  namespace: librenms
  labels:
    app.kubernetes.io/name: librenms
    app.kubernetes.io/component: database
spec:
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector:
    app.kubernetes.io/name: librenms
    app.kubernetes.io/component: database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: librenms-db
  namespace: librenms
  labels:
    app.kubernetes.io/name: librenms
    app.kubernetes.io/component: database
spec:
  serviceName: librenms-db
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: librenms
      app.kubernetes.io/component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librenms
        app.kubernetes.io/component: database
    spec:
      serviceAccountName: librenms-sa
      containers:
        - name: mariadb
          image: mariadb:10.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "local-path"
        resources:
          requests:
            storage: 10Gi
