apps/base/librenms/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: librenms-redis
  namespace: librenms
  labels:
    app.kubernetes.io/name: librenms
    app.kubernetes.io/component: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: librenms
    app.kubernetes.io/component: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librenms-redis
  namespace: librenms
  labels:
    app.kubernetes.io/name: librenms
    app.kubernetes.io/component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: librenms
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librenms
        app.kubernetes.io/component: redis
    spec:
      serviceAccountName: librenms-sa
      containers:
        - name: redis
          image: redis:6.0-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
