apps/base/librenms/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librenms-ingress
  namespace: librenms
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - librenms.fog.chalko.com
      secretName: librenms-tls
  rules:
    - host: librenms.fog.chalko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librenms
                port:
                  number: 8000
